--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# = Spring Datasource
+# = Spring DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/vetcontacts?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=?&CV:c(N/ZZ;k,L)`9w?^'rCN
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# = Hibernate ddl auto(create, create-drop, update)
+# = Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
 
 # = Show log for each sql query
